connection chat ok

--- a/ui_html/index.html
+++ b/ui_html/index.html
@@ -10,7 +10,7 @@
 <body>
     <aside class="sidebar">
     <div class="logo">
-        <img src="../assets/images/logo_vertia.png" alt="VertIA">
+        <img src="assets/images/logo_vertia.png" alt="VertIA">
     </div>
     <ul class="conv-list">
         <li>Session 1</li>
