bouton + pour créer conv ok

--- a/ui_html/index.html
+++ b/ui_html/index.html
@@ -8,10 +8,16 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  
     <aside class="sidebar">
     <div class="logo">
         <img src="assets/images/logo_vertia.png" alt="VertIA">
     </div>
+
+    <div class="new-conv">
+      <img src="assets/images/plus_icon.png" alt="Nouvelle conversation" id="new-conv-btn">
+    </div>
+
     <ul class="conv-list">
     </ul>
     </aside>
