mise à jour ui - design

--- a/ui_html/index.html
+++ b/ui_html/index.html
@@ -8,19 +8,20 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
-    <aside class="sidebar">
-    <div class="logo">
-        <img src="assets/images/logo_vertia.png" alt="VertIA">
-    </div>
 
-    <div class="new-conv">
-      <img src="assets/images/plus_icon.png" alt="Nouvelle conversation" id="new-conv-btn">
-    </div>
+<aside class="sidebar">
+  <div class="logo">
+    <img src="assets/images/logo_vertia.png" alt="VertIA">
+  </div>
 
-    <ul class="conv-list">
-    </ul>
-    </aside>
+  <!-- Bouton "Nouvelle conversation" en haut -->
+  <div id="new-session-btn" class="new-session-btn">
+    <img src="assets/images/plus_icon.png" alt="Nouvelle conversation">
+  </div>
+
+  <ul class="conv-list">
+  </ul>
+</aside>
 
 
     <!-- Zone centrale -->
