--- a/ui_html/index.html
+++ b/ui_html/index.html
@@ -28,7 +28,7 @@
 <!-- Zone centrale -->
 <main class="chat-container">
   <div id="chat-box" class="chat-box">
-    <!-- Messages mock ajoutés via JS -->
+    <!-- Messages ajoutés via JS -->
   </div>
 
   <div class="input-container">
@@ -42,6 +42,7 @@
 
 </main>
 
-<script src="js/script.js"></script>
+<!-- Chargement des modules JavaScript -->
+<script type="module" src="js/main.js"></script>
 </body>
 </html>
