ajout bouton + envoie fichier ok

--- a/ui_html/index.html
+++ b/ui_html/index.html
@@ -32,13 +32,17 @@
   </div>
 
   <div class="input-container">
+    <button id="plus-btn" aria-label="Plus">
+      <img src="assets/images/plus_icon.png" alt="Plus">
+    </button>
     <textarea id="chat-input" placeholder="Écrire un message..." aria-label="Écrire un message"></textarea>
     <button id="send-btn" aria-label="Envoyer">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
-        <path d="M3.4 20.6L20.3 12 3.4 3.4l.1 7.2 10 1.4-10 1.4-.1 7.2z"/>
+          <path d="M3.4 20.6L20.3 12 3.4 3.4l.1 7.2 10 1.4-10 1.4-.1 7.2z"/>
         </svg>
     </button>
-  </div>
+</div>
+
 
 </main>
 
