avant ajout logique affichage fichiers injectés

--- a/ui_html/index.html
+++ b/ui_html/index.html
@@ -31,6 +31,11 @@
     <!-- Messages ajoutés via JS -->
   </div>
 
+  <!-- Nouvelle zone fichiers injectés -->
+  <div id="files-zone" class="files-zone">
+    <strong>Fichiers injectés :</strong>
+  </div>
+
   <div class="input-container">
     <button id="plus-btn" aria-label="Plus">
       <img src="assets/images/plus_icon.png" alt="Plus">
@@ -41,9 +46,7 @@
           <path d="M3.4 20.6L20.3 12 3.4 3.4l.1 7.2 10 1.4-10 1.4-.1 7.2z"/>
         </svg>
     </button>
-</div>
-
-
+  </div>
 </main>
 
 <!-- Chargement des modules JavaScript -->
